fix: Firestore usage issues resolved

--- a/.env
+++ b/.env
@@ -9,14 +9,15 @@ UFC_DATA_CACHE_DURATION_HOURS=24
 
 # Firebase Emulator configuration
 NUXT_FIREBASE_PROJECT_ID=mmahub-dev
+NUXT_FIREBASE_USE_EMULATOR=false
 NUXT_FIRESTORE_EMULATOR_HOST=localhost:8080
 
 # Firebase configuration (uncomment and fill with your values for production)
 # NUXT_FIREBASE_TYPE=service_account
 # NUXT_FIREBASE_PROJECT_ID=your-project-id
 # NUXT_FIREBASE_PRIVATE_KEY_ID=your-private-key-id
-# NUXT_FIREBASE_PRIVATE_KEY=your-private-key
-# NUXT_FIREBASE_CLIENT_EMAIL=your-client-email
+# NUXT_FIREBASE_SERVICE_ACCOUNT_PRIVATE_KEY=your-private-key
+# NUXT_FIREBASE_SERVICE_ACCOUNT_CLIENT_EMAIL=your-client-email
 # NUXT_FIREBASE_CLIENT_ID=your-client-id
 # NUXT_FIREBASE_AUTH_URI=https://accounts.google.com/o/oauth2/auth
 # NUXT_FIREBASE_TOKEN_URI=https://oauth2.googleapis.com/token
