--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "build": "nuxt build",
     "build:firebase": "nuxt build --preset=firebase",
     "deploy": "pnpm run build:firebase && firebase deploy",
-    "dev": "nuxt dev",
-    "dev:emulator": "concurrently 'firebase emulators:start' 'NUXT_FIREBASE_USE_EMULATOR=true nuxt dev' --names 'FIREBASE,Nuxt' --prefixColors 'bgBlue.bold,bgGreen.bold'",
+    "dev": "nuxt dev --dotenv .env.local",
+    "dev:emulator": "concurrently 'firebase emulators:start' 'NUXT_FIREBASE_USE_EMULATOR=true pnpm run dev' --names 'FIREBASE,Nuxt' --prefixColors 'bgBlue.bold,bgGreen.bold'",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
